Fix named volume in docker-compose.yml
Meant to specify the local directory; instead had named volume.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     restart: always
     image: daprejean/rails:latest
     volumes:
-    - railsApp:/railsApp
+    - ./railsApp:/railsApp
     ports:
     - "${RAILS_EXTERNAL_PORT}:3000"
     environment:
