Add $HTTPS_PROXY variable to docker-compose.yml
Always set all the variables that docker-compose will look for
in the .env file. Let them be blank if not required.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     environment:
     - RAILS_ENV=${RAILS_RUN_ENV}
     - SECRET_KEY_BASE=${RAILS_SECRET_KEY_BASE}
-    - HTTP_PROXY=${HTTP_PROXY}
-    - HTTPS_PROXY=${HTTP_PROXY}
+    - http_proxy=${HTTP_PROXY}
+    - https_proxy=${HTTPS_PROXY}
     - LOCAL_USER_ID=${LOCAL_USER_ID}
     - LOCAL_GROUP_ID=${LOCAL_GROUP_ID}
