Add db passwords to env config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,5 @@ services:
     - https_proxy=${HTTPS_PROXY}
     - LOCAL_USER_ID=${LOCAL_USER_ID}
     - LOCAL_GROUP_ID=${LOCAL_GROUP_ID}
+    - RAILS_STAG_DB_PASS=${RAILS_STAG_DB_PASS}
+    - RAILS_PROD_DB_PASS=${RAILS_PROD_DB_PASS}
