Add env variables for database credentials

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,5 +16,9 @@ services:
     - https_proxy=${HTTPS_PROXY}
     - LOCAL_USER_ID=${LOCAL_USER_ID}
     - LOCAL_GROUP_ID=${LOCAL_GROUP_ID}
+    - RAILS_DEV_DB_USER=${RAILS_DEV_DB_USER}
+    - RAILS_DEV_DB_PASS=${RAILS_DEV_DB_PASS}
+    - RAILS_STAG_DB_USER=${RAILS_STAG_DB_USER}
     - RAILS_STAG_DB_PASS=${RAILS_STAG_DB_PASS}
+    - RAILS_PROD_DB_USER=${RAILS_PROD_DB_USER}
     - RAILS_PROD_DB_PASS=${RAILS_PROD_DB_PASS}
